feat: adicionando itens do cabeçalho

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
     <header>
         <section class="cabeca">
+            <p>Nossos Lobinhos</p>
+            <img src="lobo.png.png">
+            <p>Quem somos</p>
         </section>
     </header>
     
