refactor: renomeando imagem do lobo.png

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <section class="cabeca">
             <p>Nossos Lobinhos</p>
-            <img src="lobo.png.png">
+            <img src="lobo.png">
             <p>Quem somos</p>
         </section>
     </header>
