feat: tornando os links do cabeçalho funcionais e estéticos

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <header>
-        <section class="cabeca">
-            <p>Nossos Lobinhos</p>
+        <div class="cabeca">
+            <a href="/">Nossos Lobinhos</a>
             <img src="lobo.png">
-            <p>Quem somos</p>
-        </section>
+            <a href="/">Quem somos</a>
+        </div>
     </header>
     
 </body>
