feat: adicionando imagem do lobo e a dimensionando

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
             <img src="lobo.png">
             <a href="/">Quem somos</a>
         </div>
+        <div class="firstDiv">
+            <img class="imagem" src="loboreal.png">
+        </div>
     </header>
     
 </body>
