feat: adicionando div de texto + linha branca na firstDiv

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         </div>
         <div class="firstDiv">
             <img class="imagem" src="loboreal.png">
+            <div class="textoFirstDiv">
+                <h1 class="adoteUmLobinho">Adote um lobinho</h1>
+                <p>É claro que o consenso sobre a necessidade de qualificação apresenta tendências no sentido de aprovar a manutenção das regras de conduta normativas.</p>
+            </div>
         </div>
     </header>
     
