feat: adicionando secondDiv com título "Sobre" + texto

--- a/index.html
+++ b/index.html
@@ -21,7 +21,32 @@
                 <p>É claro que o consenso sobre a necessidade de qualificação apresenta tendências no sentido de aprovar a manutenção das regras de conduta normativas.</p>
             </div>
         </div>
+
+        <div class="secondDiv">
+            <h1 class="sobre">Sobre</h1>
+            <p>
+                Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas. Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas.Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas.Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas.
+            </p>
+        </div>
     </header>
     
 </body>
 </html>
+
+/* Descrição */
+
+position: absolute;
+width: 960px;
+height: 166px;
+left: 220px;
+top: 740px;
+
+font-family: 'Darker Grotesque';
+font-style: normal;
+font-weight: 400;
+font-size: 24px;
+line-height: 33px;
+text-align: center;
+
+color: #FFFFFF;
+
