style: ajustando header, main, footer

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
             <a href="/">Nossos Lobinhos</a>
             <img src="lobo.png">
             <a href="/">Quem somos</a>
+    </header>
+
+    <main>
         </div>
         <div class="firstDiv">
             <img class="imagem" src="loboreal.png">
@@ -28,7 +31,11 @@
                 Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas. Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas.Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas.Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas.
             </p>
         </div>
-    </header>
+    </main>
+
+    <footer>
+        
+    </footer>
     
 </body>
 </html>
