feat: criando div itens

--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
         
         <div class="thirdDiv">
             <h1 class="valores">Valores</h1>
+
+            <div class="itens">
+                
+            </div>
         </div>
     </main>
 
