feat: criando e posicionando as divs (protecao, carinho, companheirismo e resgate)

--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
             <h1 class="valores">Valores</h1>
 
             <div class="itens">
-                
+                <div class="protecao"></div>
+                <div class="carinho"></div>
+                <div class="companheirismo"></div>
+                <div class="resgate"></div>
             </div>
         </div>
     </main>
