feat: adicionando foto, titulo e texto à div protecao

--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
             <h1 class="valores">Valores</h1>
 
             <div class="itens">
-                <div class="protecao"></div>
+                <div class="protecao">
+                    <img src="protecao.png">
+                    <h2 class="tituloProtecao">Proteção</h2>
+                    <p class="textoProtecao">Assim mesmo, o desenvolvimento contínuo de distintas formas de atuação facilita a criação do sistema de participação geral.</p>
+                </div>
                 <div class="carinho"></div>
                 <div class="companheirismo"></div>
                 <div class="resgate"></div>
