feat: adc foto, título e texto às div de itens

--- a/index.html
+++ b/index.html
@@ -38,12 +38,24 @@
             <div class="itens">
                 <div class="protecao">
                     <img src="protecao.png">
-                    <h2 class="tituloProtecao">Proteção</h2>
-                    <p class="textoProtecao">Assim mesmo, o desenvolvimento contínuo de distintas formas de atuação facilita a criação do sistema de participação geral.</p>
+                    <h2 class="tituloItens">Proteção</h2>
+                    <p class="textoItens">Assim mesmo, o desenvolvimento contínuo de distintas formas de atuação facilita a criação do sistema de participação geral.</p>
                 </div>
-                <div class="carinho"></div>
-                <div class="companheirismo"></div>
-                <div class="resgate"></div>
+                <div class="carinho">
+                    <img src="protecao.png">
+                    <h2 class="tituloItens">Carinho</h2>
+                    <p class="textoItens">Assim mesmo, o desenvolvimento contínuo de distintas formas de atuação facilita a criação do sistema de participação geral.</p>
+                </div>
+                <div class="companheirismo">
+                    <img src="protecao.png">
+                    <h2 class="tituloItens">Companheirismo</h2>
+                    <p class="textoItens">Assim mesmo, o desenvolvimento contínuo de distintas formas de atuação facilita a criação do sistema de participação geral.</p>
+                </div>
+                <div class="resgate">
+                    <img src="protecao.png">
+                    <h2 class="tituloItens">Resgate</h2>
+                    <p class="textoItens">Assim mesmo, o desenvolvimento contínuo de distintas formas de atuação facilita a criação do sistema de participação geral.</p>
+                </div>
             </div>
         </div>
     </main>
