chore: juntando 4 classes diff em uma só: 'eachItem'

--- a/index.html
+++ b/index.html
@@ -36,22 +36,22 @@
             <h1 class="valores">Valores</h1>
 
             <div class="itens">
-                <div class="protecao">
+                <div class="eachItem">
                     <img src="protecao.png">
                     <h2 class="tituloItens">Proteção</h2>
                     <p class="textoItens">Assim mesmo, o desenvolvimento contínuo de distintas formas de atuação facilita a criação do sistema de participação geral.</p>
                 </div>
-                <div class="carinho">
+                <div class="eachItem">
                     <img src="protecao.png">
                     <h2 class="tituloItens">Carinho</h2>
                     <p class="textoItens">Assim mesmo, o desenvolvimento contínuo de distintas formas de atuação facilita a criação do sistema de participação geral.</p>
                 </div>
-                <div class="companheirismo">
+                <div class="eachItem">
                     <img src="protecao.png">
                     <h2 class="tituloItens">Companheirismo</h2>
                     <p class="textoItens">Assim mesmo, o desenvolvimento contínuo de distintas formas de atuação facilita a criação do sistema de participação geral.</p>
                 </div>
-                <div class="resgate">
+                <div class="eachItem">
                     <img src="protecao.png">
                     <h2 class="tituloItens">Resgate</h2>
                     <p class="textoItens">Assim mesmo, o desenvolvimento contínuo de distintas formas de atuação facilita a criação do sistema de participação geral.</p>
