refactor: transformando .valores e .sobre apenas em h1

--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
         </div>
 
         <div class="secondDiv">
-            <h1 class="sobre">Sobre</h1>
+            <h1>Sobre</h1>
             <p>
                 Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas. Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas.Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas.Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas.
             </p>
         </div>
         
         <div class="thirdDiv">
-            <h1 class="valores">Valores</h1>
+            <h1>Valores</h1>
 
             <div class="itens">
                 <div class="eachItem">
