--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
                 </div>
             </div>
         </div>
+        
+        <h1 class="tituloLobos">Lobos Exemplo</h1>
+
     </main>
 
     <footer>
