feat: criando fourthDiv para mostrar os lobos

--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
         
         <h1 class="tituloLobos">Lobos Exemplo</h1>
 
+        <div class="fourthDiv">
+            
+        </div>
+
     </main>
 
     <footer>
