feat: criando duas divs para cada lobo

--- a/index.html
+++ b/index.html
@@ -62,7 +62,13 @@
         <h1 class="tituloLobos">Lobos Exemplo</h1>
 
         <div class="fourthDiv">
-            
+            <div class="firstWolf">
+
+            </div>
+
+            <div class="secondWolf">
+                
+            </div>
         </div>
 
     </main>
