feat: criando e posicionando classes dos dados de contato

--- a/index.html
+++ b/index.html
@@ -76,6 +76,18 @@
     <footer>
         <div class="foot">
             <img src="maps.png">
+
+            <div class="dados">
+                <div class="local">
+
+                </div>
+                <div class="tel">
+
+                </div>
+                <div class="email">
+
+                </div>
+            </div>
         </div>
     </footer>
     
