fat: adc imagens dos ícones no site

--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
 
             <div class="dados">
                 <div class="local">
-
+                    <img src="ponteiro.png">
                 </div>
                 <div class="tel">
-
+                    <img src="telefone.png">
                 </div>
                 <div class="email">
-
+                    <img src="envelope.png">
                 </div>
             </div>
         </div>
