feat: adc telefone e email aos dados de contato

--- a/index.html
+++ b/index.html
@@ -84,9 +84,11 @@
                 </div>
                 <div class="tel">
                     <img src="telefone.png">
+                    <p>(99)99999-9999</p>
                 </div>
                 <div class="email">
                     <img src="envelope.png">
+                    <p>salve-lobos@lobINhos.com</p>
                 </div>
             </div>
         </div>
