feat: adicionando imagem e texto das patas

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
     <footer>
         <div class="foot">
-            <img src="maps.png">
+            <img class="mapa" src="maps.png">
 
             <div class="dados">
                 <div class="local">
@@ -91,6 +91,9 @@
                     <p>salve-lobos@lobINhos.com</p>
                 </div>
             </div>
+
+            <h3>Desenvolvido com</h3>
+            <img class="patas" src="paws.png">
         </div>
     </footer>
     
