--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alata&family=Bebas+Neue&family=Darker+Grotesque:wght@300..900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>Adicionar Lobinho</title>
 </head>
 <body>
     <header>
@@ -16,6 +16,14 @@
         <img src="assets/lobo.png">
         <a href="/">Quem Somos</a>
     </header>
+    <main>
+        <section class="box-adocao">
+            
+        </section>
+    </main>
+    <footer>
+
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
