feat(add-lobinhos): implementação de inputs e botão

--- a/index.html
+++ b/index.html
@@ -18,7 +18,24 @@
     </header>
     <main>
         <section class="box-adocao">
-            
+            <h1>Coloque um Lobinho para Adoção</h1>
+            <div class="inputs-adocao">
+                <div>
+                    <label for="nome-lobo">Nome do Lobinho:</label>
+                    <input type="text" id="nome-lobo">
+                    <label for="idade-lobo">Anos:</label>
+                    <input type="text" id="idade-lobo">
+                </div>
+                <div>
+                    <label for="link-foto">Link da Foto:</label>
+                    <input type="file" id="link-foto">
+                </div>
+                <div>
+                    <label for="descricao">Descrição:</label>
+                    <textarea id="descricao"></textarea>
+                </div>
+            </div>
+            <button id="btn-enviar">Salvar</button>
         </section>
     </main>
     <footer>
