feat(add-lobinho): estilização e posição inputs

--- a/index.html
+++ b/index.html
@@ -20,17 +20,21 @@
         <section class="box-adocao">
             <h1>Coloque um Lobinho para Adoção</h1>
             <div class="inputs-adocao">
-                <div>
-                    <label for="nome-lobo">Nome do Lobinho:</label>
-                    <input type="text" id="nome-lobo">
-                    <label for="idade-lobo">Anos:</label>
-                    <input type="text" id="idade-lobo">
+                <div class="linha1">
+                    <div class="input-area">
+                        <label for="nome-lobo">Nome do Lobinho:</label>
+                        <input type="text" id="nome-lobo">
+                    </div>
+                    <div class="input-area">
+                        <label for="idade-lobo">Anos:</label><br>
+                        <input type="text" id="idade-lobo">
+                    </div>
                 </div>
-                <div>
+                <div class="input-area">
                     <label for="link-foto">Link da Foto:</label>
-                    <input type="file" id="link-foto">
+                    <input type="url" id="link-foto">
                 </div>
-                <div>
+                <div class="input-area">
                     <label for="descricao">Descrição:</label>
                     <textarea id="descricao"></textarea>
                 </div>
