--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <a href="/">Nossos Lobinhos</a>
-        <img src="assets/lobo.png">
+        <img src="assets/lobo.svg">
         <a href="/">Quem Somos</a>
     </header>
     <main>
@@ -43,7 +43,32 @@
         </section>
     </main>
     <footer>
-
+        <div class="secao1-footer">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3675.187324113229!2d-43.13583512499142!3d-22.906460537858766!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x99817e444e692b%3A0xfd5e35fb577af2f5!2sUFF%20-%20Instituto%20de%20Computa%C3%A7%C3%A3o!5e0!3m2!1spt-BR!2sbr!4v1722195967603!5m2!1spt-BR!2sbr" width="250" height="168" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <div class="secao1-2-footer">
+                <div class="contato">
+                    <div class="inf-contato">
+                        <img src="assets/localizacao.svg" alt="Localização">
+                        <p>Av. Milton Tavares de Souza, s/n - Sala 115 B - Boa Viagem, Niterói - RJ, 24210-315</p>
+                    </div>
+                    <div class="inf-contato">
+                        <img src="assets/tel.svg" alt="Telefone">
+                        <p>(99) 99999-9999</p>
+                    </div>
+                    <div class="inf-contato">
+                        <img src="assets/envelope.svg" alt="Email">
+                        <p>salve-lobos@lobINhos.com</p>
+                    </div>
+                </div>
+                <div>
+                    <button class="btn-quem-somos">Quem Somos</button>
+                </div>
+            </div>
+        </div>
+        <div class="secao2-footer">
+            <p>Desenvolvido com</p>
+            <img src="assets/paws.png" alt="Patas">
+        </div>
     </footer>
     <script src="script.js"></script>
 </body>
