feat(show-lobinho): formatação show lobinho

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alata&family=Bebas+Neue&family=Darker+Grotesque:wght@300..900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alata&family=Bebas+Neue&family=Darker+Grotesque:wght@300..900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <title>Show Lobinho</title>
 </head>
 <body>
@@ -17,7 +20,17 @@
         <a href="/">Quem Somos</a>
     </header>
     <main>
-
+        <h1>Rubetta</h1>
+        <section class="show-lobinho">
+            <div class="secao-esquerda">
+                <img src="https://img.freepik.com/fotos-premium/retrato-de-um-filhote-de-lobo-fofo-brincando-na-neve-do-inverno-generative-ai_39665-506.jpg" alt="Rubetta">
+                <div>
+                    <button>ADOTAR</button>
+                    <button>EXCLUIR</button>
+                </div>
+            </div>
+            <p>Nulla tempus. Vivamus in felis eu sapien cursus vestibulum. Proin eu mi. Nulla ac enim. In tempor, turpis nec euismod scelerisque, quam turpis adipiscing lorem, vitae mattis nibh ligula nec sem. Duis aliquam convallis nunc. Proin at turpis a pede posuere nonummy. Integer non velit. Donec diam neque, vestibulum eget, vulputate ut, ultrices vel, augue. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec pharetra, magna vestibulum aliquet ultrices, erat tortor sollicitudin mi, sit amet lobortis sapien sapien non mi.</p>
+        </section>
     </main>
     <footer>
         <div class="secao1-footer">
