refactor: mudando imagens dos itens da thirdDiv

--- a/index.html
+++ b/index.html
@@ -42,17 +42,17 @@
                     <p class="textoItens">Assim mesmo, o desenvolvimento contínuo de distintas formas de atuação facilita a criação do sistema de participação geral.</p>
                 </div>
                 <div class="eachItem">
-                    <img src="protecao.png">
+                    <img src="carinho.png">
                     <h2 class="tituloItens">Carinho</h2>
                     <p class="textoItens">Assim mesmo, o desenvolvimento contínuo de distintas formas de atuação facilita a criação do sistema de participação geral.</p>
                 </div>
                 <div class="eachItem">
-                    <img src="protecao.png">
+                    <img src="companheirismo.png">
                     <h2 class="tituloItens">Companheirismo</h2>
                     <p class="textoItens">Assim mesmo, o desenvolvimento contínuo de distintas formas de atuação facilita a criação do sistema de participação geral.</p>
                 </div>
                 <div class="eachItem">
-                    <img src="protecao.png">
+                    <img src="resgate.png">
                     <h2 class="tituloItens">Resgate</h2>
                     <p class="textoItens">Assim mesmo, o desenvolvimento contínuo de distintas formas de atuação facilita a criação do sistema de participação geral.</p>
                 </div>
