feat: adc botão "Quem somos" no footer

--- a/index.html
+++ b/index.html
@@ -92,6 +92,10 @@
                 </div>
             </div>
 
+            <div>
+                <button class="btn">Quem Somos</button>
+            </div>
+
             <h3>Desenvolvido com</h3>
             <img class="patas" src="paws.png">
         </div>
