refactor: trocando imagem do mapa pelo iframe

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
     <footer>
         <div class="foot">
-            <img class="mapa" src="maps.png">
+            <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3675.187324113229!2d-43.13583512499142!3d-22.906460537858766!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x99817e444e692b%3A0xfd5e35fb577af2f5!2sUFF%20-%20Instituto%20de%20Computa%C3%A7%C3%A3o!5e0!3m2!1spt-BR!2sbr!4v1722195967603!5m2!1spt-BR!2sbr" width="250" height="168" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
             <div class="dados">
                 <div class="local">
