--- a/indexHP.html
+++ b/indexHP.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
     <link rel="stylesheet" href="Reset.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styleHP.css">
 </head>
 <body>
     <header>
