feat: criando a pasta assest e referenciando as imagens à ela

--- a/indexHP.html
+++ b/indexHP.html
@@ -11,14 +11,14 @@
     <header>
         <div class="cabeca">
             <a href="/">Nossos Lobinhos</a>
-            <img src="lobo.png">
+            <img src="assets/lobo.png">
             <a href="/">Quem somos</a>
         </div>
     </header>
 
     <main>
         <div class="firstDiv">
-            <img class="imagem" src="loboreal.png">
+            <img class="imagem" src="assets/loboreal.png">
             <div class="textoFirstDiv">
                 <h1 class="adoteUmLobinho">Adote um lobinho</h1>
                 <p>É claro que o consenso sobre a necessidade de qualificação apresenta tendências no sentido de aprovar a manutenção das regras de conduta normativas.</p>
@@ -37,22 +37,22 @@
 
             <div class="itens">
                 <div class="eachItem">
-                    <img src="protecao.png">
+                    <img src="assets/protecao.png">
                     <h2 class="tituloItens">Proteção</h2>
                     <p class="textoItens">Assim mesmo, o desenvolvimento contínuo de distintas formas de atuação facilita a criação do sistema de participação geral.</p>
                 </div>
                 <div class="eachItem">
-                    <img src="carinho.png">
+                    <img src="assets/carinho.png">
                     <h2 class="tituloItens">Carinho</h2>
                     <p class="textoItens">Assim mesmo, o desenvolvimento contínuo de distintas formas de atuação facilita a criação do sistema de participação geral.</p>
                 </div>
                 <div class="eachItem">
-                    <img src="companheirismo.png">
+                    <img src="assets/companheirismo.png">
                     <h2 class="tituloItens">Companheirismo</h2>
                     <p class="textoItens">Assim mesmo, o desenvolvimento contínuo de distintas formas de atuação facilita a criação do sistema de participação geral.</p>
                 </div>
                 <div class="eachItem">
-                    <img src="resgate.png">
+                    <img src="assets/resgate.png">
                     <h2 class="tituloItens">Resgate</h2>
                     <p class="textoItens">Assim mesmo, o desenvolvimento contínuo de distintas formas de atuação facilita a criação do sistema de participação geral.</p>
                 </div>
@@ -79,15 +79,15 @@
 
             <div class="dados">
                 <div class="local">
-                    <img src="ponteiro.png">
+                    <img src="assets/ponteiro.png">
                     <p>Av. Milton Tavares de Souza, s/n - Sala 115 B - Boa Viagem, Niterói - RJ, 24210-315</p>
                 </div>
                 <div class="tel">
-                    <img src="telefone.png">
+                    <img src="assets/telefone.png">
                     <p>(99)99999-9999</p>
                 </div>
                 <div class="email">
-                    <img src="envelope.png">
+                    <img src="assets/envelope.png">
                     <p>salve-lobos@lobINhos.com</p>
                 </div>
             </div>
@@ -97,7 +97,7 @@
             </div>
 
             <h3>Desenvolvido com</h3>
-            <img class="patas" src="paws.png">
+            <img class="patas" src="assets/paws.png">
         </div>
     </footer>
     
