refactor: mudando nome da classe

--- a/indexQS.html
+++ b/indexQS.html
@@ -14,8 +14,8 @@
         <a href="/">Quem Somos</a>
     </header>
 
-    <div class="titulo">
-        <p>Quem somos</p>
+    <div class="texto">
+        <h1>Quem somos</h1>
     </div>
 
     <footer>
