feat: adicionando e ajustando texto central

--- a/indexQS.html
+++ b/indexQS.html
@@ -17,6 +17,10 @@
     <div class="texto">
         <h1>Quem somos</h1>
     </div>
+    
+    <div class="descricao">
+        <p>Gingerbread cookie gingerbread jujubes cake biscuit tart fruitcake. Jujubes chupa chups wafer cheesecake lemon drops. Pastry caramels cookie marshmallow. Chupa chups jelly beans apple pie powder marzipan oat cake jelly-o chupa chups biscuit. Lollipop biscuit jujubes tootsie roll oat cake chocolate bar.</p>
+    </div>
 
     <footer>
         <div class="secao1-footer">
