feat: criando pasta assets e a referenciando à ela

--- a/indexQS.html
+++ b/indexQS.html
@@ -10,14 +10,14 @@
 <body>
     <header>
         <a href="/">Nossos Lobinhos</a>
-        <img src="lobo.svg">
+        <img src="assest/lobo.svg">
         <a href="/">Quem Somos</a>
     </header>
 
     <div class="texto">
         <h1>Quem somos</h1>
     </div>
-    
+
     <div class="descricao">
         <p>Gingerbread cookie gingerbread jujubes cake biscuit tart fruitcake. Jujubes chupa chups wafer cheesecake lemon drops. Pastry caramels cookie marshmallow. Chupa chups jelly beans apple pie powder marzipan oat cake jelly-o chupa chups biscuit. Lollipop biscuit jujubes tootsie roll oat cake chocolate bar.</p>
     </div>
@@ -28,15 +28,15 @@
             <div class="secao1-2-footer">
                 <div class="contato">
                     <div class="inf-contato">
-                        <img src="ponteiro.svg" alt="Localização">
+                        <img src="assest/ponteiro.svg" alt="Localização">
                         <p>Av. Milton Tavares de Souza, s/n - Sala 115 B - Boa Viagem, Niterói - RJ, 24210-315</p>
                     </div>
                     <div class="inf-contato">
-                        <img src="telefone.svg" alt="Telefone">
+                        <img src="assest/telefone.svg" alt="Telefone">
                         <p>(99) 99999-9999</p>
                     </div>
                     <div class="inf-contato">
-                        <img src="envelope.svg" alt="Email">
+                        <img src="assest/envelope.svg" alt="Email">
                         <p>salve-lobos@lobINhos.com</p>
                     </div>
                 </div>
@@ -47,7 +47,7 @@
         </div>
         <div class="secao2-footer">
             <p>Desenvolvido com</p>
-            <img src="paws.svg" alt="Patas">
+            <img src="assest/paws.svg" alt="Patas">
         </div>
     </footer>
     
