feat: criando caixa de texto para o 1º lobo

--- a/indexHP.html
+++ b/indexHP.html
@@ -63,7 +63,9 @@
 
         <div class="fourthDiv">
             <div class="firstWolf">
-
+                <div class="boxText">
+                    
+                </div>
             </div>
 
             <div class="secondWolf">
