feat: adc info e img do firstWolf

--- a/indexHP.html
+++ b/indexHP.html
@@ -63,8 +63,12 @@
 
         <div class="fourthDiv">
             <div class="firstWolf">
-                <div class="boxText">
-                    
+                <img class="quadAzul" src="assets/quadAzul.svg">
+                <img class="lobo1" src="assets/lobo1.svg">
+                <div class="boxText1">
+                    <div class="nomeLobo">Nome Lobo</div>
+                    <div class="idadeLobo">Idade: XX anos</div>
+                    <div class="descricaoLobo">Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas. Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas.Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas.Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas.</div>
                 </div>
             </div>
 
