--- a/indexHP.html
+++ b/indexHP.html
@@ -75,10 +75,10 @@
             <div class="secondWolf">
                 <img class="quadAzul" src="assets/quadAzul.svg">
                 <img class="lobo2" src="assets/lobo1.svg">
-                <div class="boxText1">
+                <div class="boxText2">
                     <div class="nomeLobo">Nome Lobo</div>
                     <div class="idadeLobo">Idade: XX anos</div>
-                    <div class="descricaoLobo">Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas. Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas.Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas.Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas.</div>
+                    <div class="descricaoLobo2">Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas. Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas.Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas.Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas.</div>
                 </div>
             </div>
         </div>
