feat(add-lobinho): inputs do lobo no local storage

--- a/index.html
+++ b/index.html
@@ -23,20 +23,20 @@
                 <div class="linha1">
                     <div class="input-area">
                         <label for="nome-lobo">Nome do Lobinho:</label>
-                        <input type="text" id="nome-lobo">
+                        <input type="text" id="nome-lobo" required>
                     </div>
                     <div class="input-area">
                         <label for="idade-lobo">Anos:</label><br>
-                        <input type="text" id="idade-lobo">
+                        <input type="text" id="idade-lobo" required>
                     </div>
                 </div>
                 <div class="input-area">
                     <label for="link-foto">Link da Foto:</label>
-                    <input type="url" id="link-foto">
+                    <input type="url" id="link-foto" required>
                 </div>
                 <div class="input-area">
                     <label for="descricao">Descrição:</label>
-                    <textarea id="descricao"></textarea>
+                    <textarea id="descricao" required></textarea>
                 </div>
             </div>
             <button id="btn-enviar">Salvar</button>
