--- a/show-lobinho/index.html
+++ b/show-lobinho/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="/reset.css">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,7 +16,7 @@
 <body>
     <header>
         <a href="/">Nossos Lobinhos</a>
-        <img src="assets/lobo.svg">
+        <img src="/assets/lobo.svg">
         <a href="/">Quem Somos</a>
     </header>
     <main>
@@ -38,15 +38,15 @@
             <div class="secao1-2-footer">
                 <div class="contato">
                     <div class="inf-contato">
-                        <img src="assets/localizacao.svg" alt="Localização">
+                        <img src="/assets/localizacao.svg" alt="Localização">
                         <p>Av. Milton Tavares de Souza, s/n - Sala 115 B - Boa Viagem, Niterói - RJ, 24210-315</p>
                     </div>
                     <div class="inf-contato">
-                        <img src="assets/tel.svg" alt="Telefone">
+                        <img src="/assets/tel.svg" alt="Telefone">
                         <p>(99) 99999-9999</p>
                     </div>
                     <div class="inf-contato">
-                        <img src="assets/envelope.svg" alt="Email">
+                        <img src="/assets/envelope.svg" alt="Email">
                         <p>salve-lobos@lobINhos.com</p>
                     </div>
                 </div>
@@ -57,9 +57,9 @@
         </div>
         <div class="secao2-footer">
             <p>Desenvolvido com</p>
-            <img src="assets/paws.png" alt="Patas">
+            <img src="/assets/paws.png" alt="Patas">
         </div>
     </footer>
-    <script src="script.js"></script>
+    <script src="/script.js"></script>
 </body>
 </html>
