feat: personalização show-lobinho com js

--- a/adicionar-lobo/index.html
+++ b/adicionar-lobo/index.html
@@ -70,6 +70,6 @@
             <img src="/assets/paws.png" alt="Patas">
         </div>
     </footer>
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
