--- a/show-lobinho/index.html
+++ b/show-lobinho/index.html
@@ -19,19 +19,7 @@
         <img src="/assets/lobo.svg">
         <a href="/">Quem Somos</a>
     </header>
-    <main>
-        <h1>Rubetta</h1>
-        <section class="show-lobinho">
-            <div class="secao-esquerda">
-                <img src="https://img.freepik.com/fotos-premium/retrato-de-um-filhote-de-lobo-fofo-brincando-na-neve-do-inverno-generative-ai_39665-506.jpg" alt="Rubetta">
-                <div class="botoes">
-                    <button class="adotar">ADOTAR</button>
-                    <button class="excluir">EXCLUIR</button>
-                </div>
-            </div>
-            <p>Nulla tempus. Vivamus in felis eu sapien cursus vestibulum. Proin eu mi. Nulla ac enim. In tempor, turpis nec euismod scelerisque, quam turpis adipiscing lorem, vitae mattis nibh ligula nec sem. Duis aliquam convallis nunc. Proin at turpis a pede posuere nonummy. Integer non velit. Donec diam neque, vestibulum eget, vulputate ut, ultrices vel, augue. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec pharetra, magna vestibulum aliquet ultrices, erat tortor sollicitudin mi, sit amet lobortis sapien sapien non mi.</p>
-        </section>
-    </main>
+    <main class="main"></main>
     <footer>
         <div class="secao1-footer">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3675.187324113229!2d-43.13583512499142!3d-22.906460537858766!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x99817e444e692b%3A0xfd5e35fb577af2f5!2sUFF%20-%20Instituto%20de%20Computa%C3%A7%C3%A3o!5e0!3m2!1spt-BR!2sbr!4v1722195967603!5m2!1spt-BR!2sbr" width="250" height="168" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -60,6 +48,6 @@
             <img src="/assets/paws.png" alt="Patas">
         </div>
     </footer>
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
