feat:Lista de lobos consumida na main

--- a/ListaDeLobinhos/index.html
+++ b/ListaDeLobinhos/index.html
@@ -18,7 +18,7 @@
         <img src="assets/lobo.svg">
         <a href="/">Quem Somos</a>
     </header>
-    <main id="container">
+    <main class="container">
         
         
     </main>
