--- a/indexHP.html
+++ b/indexHP.html
@@ -66,9 +66,9 @@
                 <img class="quadAzul" src="assets/quadAzul.svg">
                 <img class="lobo1" src="assets/lobo1.svg">
                 <div class="boxText1">
-                    <div class="nomeLobo">Nome Lobo</div>
-                    <div class="idadeLobo">Idade: XX anos</div>
-                    <div class="descricaoLobo">Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas. Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas.Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas.Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas.</div>
+                    <div class="nomeLobo1">Damon</div>
+                    <div class="idadeLobo">Idade: 62 anos</div>
+                    <div class="descricaoLobo1">Praesent blandit. Nam nulla. Integer pede justo, lacinia eget, tincidunt eget, tempus vel, pede. Morbi porttitor lorem id ligula. Suspendisse ornare consequat lectus. In est risus, auctor sed, tristique in, tempus sit amet, sem.</div>
                 </div>
             </div>
 
@@ -76,9 +76,9 @@
                 <img class="quadAzul" src="assets/quadAzul.svg">
                 <img class="lobo2" src="assets/lobo2.svg">
                 <div class="boxText2">
-                    <div class="nomeLobo">Nome Lobo</div>
-                    <div class="idadeLobo">Idade: XX anos</div>
-                    <div class="descricaoLobo2">Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas. Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas.Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas.Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas.</div>
+                    <div class="nomeLobo2">Jammie</div>
+                    <div class="idadeLobo">Idade: 9 anos</div>
+                    <div class="descricaoLobo2">Mauris enim leo, rhoncus sed, vestibulum sit amet, cursus id, turpis. Integer aliquet, massa id lobortis convallis, tortor risus dapibus augue, vel accumsan tellus nisi eu orci. Mauris lacinia sapien quis libero. Nullam sit amet turpis elementum ligula vehicula consequat. Morbi a ipsum. Integer a nibh.</div>
                 </div>
             </div>
         </div>
