fix: correção de alinhamentos

--- a/indexQS.html
+++ b/indexQS.html
@@ -6,6 +6,9 @@
     <title>Quem somos</title>
     <link rel="stylesheet" href="Reset.css">
     <link rel="stylesheet" href="styleQS.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alata&family=Bebas+Neue&family=Darker+Grotesque:wght@300..900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -14,13 +17,15 @@
         <a href="/">Quem Somos</a>
     </header>
 
-    <div class="texto">
-        <h1>Quem somos</h1>
-    </div>
+    <main>
+        <div class="texto">
+            <h1>Quem somos</h1>
+        </div>
 
-    <div class="descricao">
-        <p>Gingerbread cookie gingerbread jujubes cake biscuit tart fruitcake. Jujubes chupa chups wafer cheesecake lemon drops. Pastry caramels cookie marshmallow. Chupa chups jelly beans apple pie powder marzipan oat cake jelly-o chupa chups biscuit. Lollipop biscuit jujubes tootsie roll oat cake chocolate bar.</p>
-    </div>
+        <div class="descricao">
+            <p>Gingerbread cookie gingerbread jujubes cake biscuit tart fruitcake. Jujubes chupa chups wafer cheesecake lemon drops. Pastry caramels cookie marshmallow. Chupa chups jelly beans apple pie powder marzipan oat cake jelly-o chupa chups biscuit. Lollipop biscuit jujubes tootsie roll oat cake chocolate bar.</p>
+        </div>
+    </main>
 
     <footer>
         <div class="secao1-footer">
