--- a/quem-somos/index.html
+++ b/quem-somos/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quem somos</title>
-    <link rel="stylesheet" href="Reset.css">
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="styleQS.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
