--- a/quem-somos/index.html
+++ b/quem-somos/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quem somos</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="styleQS.css">
+    <link rel="stylesheet" href="/reset.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alata&family=Bebas+Neue&family=Darker+Grotesque:wght@300..900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
@@ -13,7 +13,7 @@
 <body>
     <header>
         <a href="/">Nossos Lobinhos</a>
-        <img src="assest/lobo.svg">
+        <img src="/assets/lobo.svg">
         <a href="/">Quem Somos</a>
     </header>
 
@@ -37,11 +37,11 @@
                         <p>Av. Milton Tavares de Souza, s/n - Sala 115 B - Boa Viagem, Niterói - RJ, 24210-315</p>
                     </div>
                     <div class="inf-contato">
-                        <img src="assest/telefone.svg" alt="Telefone">
+                        <img src="/assets/telefone.svg" alt="Telefone">
                         <p>(99) 99999-9999</p>
                     </div>
                     <div class="inf-contato">
-                        <img src="assest/envelope.svg" alt="Email">
+                        <img src="/assets/envelope.svg" alt="Email">
                         <p>salve-lobos@lobINhos.com</p>
                     </div>
                 </div>
@@ -52,7 +52,7 @@
         </div>
         <div class="secao2-footer">
             <p>Desenvolvido com</p>
-            <img src="assest/paws.svg" alt="Patas">
+            <img src="/assets/paws.png" alt="Patas">
         </div>
     </footer>
     
