fix: caminhos dos arquivos e link botão quem somos

--- a/quem-somos/index.html
+++ b/quem-somos/index.html
@@ -33,11 +33,11 @@
             <div class="secao1-2-footer">
                 <div class="contato">
                     <div class="inf-contato">
-                        <img src="assest/ponteiro.svg" alt="Localização">
+                        <img src="/assets/localizacao.svg" alt="Localização">
                         <p>Av. Milton Tavares de Souza, s/n - Sala 115 B - Boa Viagem, Niterói - RJ, 24210-315</p>
                     </div>
                     <div class="inf-contato">
-                        <img src="/assets/telefone.svg" alt="Telefone">
+                        <img src="/assets/tel.svg" alt="Telefone">
                         <p>(99) 99999-9999</p>
                     </div>
                     <div class="inf-contato">
@@ -46,7 +46,7 @@
                     </div>
                 </div>
                 <div>
-                    <button class="btn-quem-somos">Quem Somos</button>
+                    <button class="btn-quem-somos" onclick="window.location.href='/quem-somos';">Quem Somos</button>
                 </div>
             </div>
         </div>
