--- a/show-lobinho/index.html
+++ b/show-lobinho/index.html
@@ -39,7 +39,7 @@
                     </div>
                 </div>
                 <div>
-                    <button class="btn-quem-somos">Quem Somos</button>
+                    <button class="btn-quem-somos" onclick="window.location.href='/quem-somos';">Quem Somos</button>
                 </div>
             </div>
         </div>
