refactor: alterando caminho das imgs

--- a/home-page/indexHP.html
+++ b/home-page/indexHP.html
@@ -11,14 +11,14 @@
     <header>
         <div class="cabeca">
             <a href="/">Nossos Lobinhos</a>
-            <img src="assets/lobo.png">
+            <img src="/assets/lobo.svg">
             <a href="/">Quem somos</a>
         </div>
     </header>
 
     <main>
         <div class="firstDiv">
-            <img class="imagem" src="assets/loboreal.png">
+            <img class="imagem" src="/assets/loboreal.png">
             <div class="textoFirstDiv">
                 <h1 class="adoteUmLobinho">Adote um lobinho</h1>
                 <p>É claro que o consenso sobre a necessidade de qualificação apresenta tendências no sentido de aprovar a manutenção das regras de conduta normativas.</p>
@@ -37,22 +37,22 @@
 
             <div class="itens">
                 <div class="eachItem">
-                    <img src="assets/protecao.png">
+                    <img src="/assets/protecao.png">
                     <h2 class="tituloItens">Proteção</h2>
                     <p class="textoItens">Assim mesmo, o desenvolvimento contínuo de distintas formas de atuação facilita a criação do sistema de participação geral.</p>
                 </div>
                 <div class="eachItem">
-                    <img src="assets/carinho.png">
+                    <img src="/assets/carinho.png">
                     <h2 class="tituloItens">Carinho</h2>
                     <p class="textoItens">Assim mesmo, o desenvolvimento contínuo de distintas formas de atuação facilita a criação do sistema de participação geral.</p>
                 </div>
                 <div class="eachItem">
-                    <img src="assets/companheirismo.png">
+                    <img src="/assets/companheirismo.png">
                     <h2 class="tituloItens">Companheirismo</h2>
                     <p class="textoItens">Assim mesmo, o desenvolvimento contínuo de distintas formas de atuação facilita a criação do sistema de participação geral.</p>
                 </div>
                 <div class="eachItem">
-                    <img src="assets/resgate.png">
+                    <img src="/assets/resgate.png">
                     <h2 class="tituloItens">Resgate</h2>
                     <p class="textoItens">Assim mesmo, o desenvolvimento contínuo de distintas formas de atuação facilita a criação do sistema de participação geral.</p>
                 </div>
@@ -63,8 +63,8 @@
 
         <div class="fourthDiv">
             <div class="firstWolf">
-                <img class="quadAzul" src="assets/quadAzul.svg">
-                <img class="lobo1" src="assets/lobo1.svg">
+                <img class="quadAzul" src="/assets/quadAzul.svg">
+                <img class="lobo1" src="/assets/lobo1.svg">
                 <div class="boxText1">
                     <div class="nomeLobo1">Damon</div>
                     <div class="idadeLobo">Idade: 62 anos</div>
@@ -73,8 +73,8 @@
             </div>
 
             <div class="secondWolf">
-                <img class="quadAzul" src="assets/quadAzul.svg">
-                <img class="lobo2" src="assets/lobo2.svg">
+                <img class="quadAzul" src="/assets/quadAzul.svg">
+                <img class="lobo2" src="/assets/lobo2.svg">
                 <div class="boxText2">
                     <div class="nomeLobo2">Jammie</div>
                     <div class="idadeLobo">Idade: 9 anos</div>
@@ -91,15 +91,15 @@
 
             <div class="dados">
                 <div class="local">
-                    <img src="assets/ponteiro.png">
+                    <img src="/assets/localizacao.svg">
                     <p>Av. Milton Tavares de Souza, s/n - Sala 115 B - Boa Viagem, Niterói - RJ, 24210-315</p>
                 </div>
                 <div class="tel">
-                    <img src="assets/telefone.png">
+                    <img src="/assets/tel.svg">
                     <p>(99)99999-9999</p>
                 </div>
                 <div class="email">
-                    <img src="assets/envelope.png">
+                    <img src="/assets/envelope.svg">
                     <p>salve-lobos@lobINhos.com</p>
                 </div>
             </div>
@@ -109,7 +109,7 @@
             </div>
 
             <h3>Desenvolvido com</h3>
-            <img class="patas" src="assets/paws.png">
+            <img class="patas" src="/assets/paws.png">
         </div>
     </footer>
     
