feat: adc link para "quem-somos"

--- a/home-page/indexHP.html
+++ b/home-page/indexHP.html
@@ -105,7 +105,7 @@
             </div>
 
             <div>
-                <button class="btn">Quem Somos</button>
+                <button class="btn" onclick="window.location.href='/quem-somos';">Quem Somos</button>
             </div>
 
             <h3>Desenvolvido com</h3>
