--- a/adotar-lobo/index.html
+++ b/adotar-lobo/index.html
@@ -17,37 +17,39 @@
         <img src="assets/lobo.svg">
         <a href="/">Quem Somos</a>
     </header>
-    <div id="container">
-        <div class="title">
-            <img src="assets/Mask Group.png" alt="">
-            <div class="adote">
-                <h1>Adote o(a) NomeDoLobo</h1>
-                <p>ID: 123456</p>
-            </div>
-        </div>
-        <div class="content">
-            <div id="input_container">
-                <div id="input_container_1">
-                    <div class="name">
-                        <p>Seu nome:</p>
-                        <input type="text" required>
-                    </div>
-                    <div class="age">
-                        <p>Idade:</p>
-                        <input type="number" required>
-                    </div>
-                </div>
-                <div id="input_container_2">
-                    <div class="email">
-                        <p>E-mail:</p>
-                        <input type="email">
-                    </div>
+    <main>
+        <div id="container">
+            <div class="title">
+                <img class='image' src="assets/Mask Group.png">
+                <div class="adote">
+                    <h1>Adote o(a) NomeDoLobo</h1>
+                    <p>ID: 123456</p>
                 </div>
             </div>
-        </div>
-        <button id="adotarBtn">
+            <div class="content">
+                <div class="input_container">
+                    <div class="input_container_1">
+                        <div class="name">
+                            <p>Seu nome:</p>
+                            <input class="nome-adocao" type="text" required>
+                        </div>
+                        <div class="age">
+                            <p>Idade:</p>
+                            <input class="idade-adocao" type="text" required>
+                        </div>
+                    </div>
+                    <div id="input_container_2">
+                        <div class="email">
+                            <p>E-mail:</p>
+                            <input class="email-adocao" type="email" required>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        <button class="adotarBtn">
             Adotar
         </button>
+    </main>
     </div>
     <footer>
         <div class="secao1-footer">
